--- a/asg8/index.html
+++ b/asg8/index.html
@@ -29,7 +29,7 @@
 			<ul>
 				<li>inspotting.org - $7.48 per year</li>
 				<li>inspotting.design - $10.98 per year</li>
-				<li>inspotting.art - $2.98 per year</li>
+				<li class="art">inspotting.art - $2.98 per year</li>
 			</ul>
 			<p>Honary mentions go to inspotting.inc, which for some bizarre reason is worth $498 per year, <em>with</em> a senty-six percent discount. Alas, I am but a humble and broke college student, so it's not meant to be.</p>
 	</div>
@@ -44,6 +44,7 @@
 </body>
 
 </html>
+
 
 
 
