--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<li><a href="./asg7/index.html">Assignment 7: Political Candidate</a></li>
 		<li><a href="./asg7/wireframes.html">Assignment 7: Wireframes</a></li>
 		<li><a href="./asg8/index.html">Assignment 8: Domain Names</a></li>
+		<li><a href="./midterm/index.html">MIDTERM</a></li>
 	</ul>
 </div>
 
