--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<li><a href="./asg7/wireframes.html">Assignment 7: Wireframes</a></li>
 		<li><a href="./asg8/index.html">Assignment 8: Domain Names</a></li>
 		<li><a href="./midterm/index.html">MIDTERM</a></li>
+		<li><a href="./asg11/index.html">Assignment 11: Dodgeball Team</a></li>
 	</ul>
 </div>
 
